syntax = "proto3";
package com.sharingplate.sensorservice.infrastructure.inbound.grpc;
option java_multiple_files = true;

service AlertService{rpc sensorDown(SensorDownRequest) returns (SensorDownResponse);
  rpc valueFluctuate(ValueFluctuateRequest) returns (ValueFluctuateResponse);
  rpc bulkData(BulkDataRequest) returns (BulkDataResponse);}

message SensorDownRequest{string sensorClientId = 1;
  string stationId = 2;}

message SensorDownResponse{bool success = 1;
  string errorMessage = 2;}

message ValueFluctuateRequest{string sensorClientId = 1;
  string stationId = 2;
  double currentValue = 3;
  double previousValue = 4;}

message ValueFluctuateResponse{bool success = 1;
  string errorMessage = 2;}

message BulkDataRequest{string stationId = 1;
  repeated MLPredictionRequest mlPredictRequest = 2;}

message BulkDataResponse{bool success = 1;
  string errorMessage = 2;}

message MLPredictionRequest {double timestamp = 1;
  string stationId = 2;
  string zone = 3;
  double lat = 4;
  double lon = 5;
  double elevationM = 6;
  double rainfallMm = 7;
  double dispIncMm = 8;
  double strainIncMicro = 9;
  double poreKpa = 10;
  double vibration = 11;}